--- a/_posts/2018-10-02-파이썬으로-계산기-만들기.md
+++ b/_posts/2018-10-02-파이썬으로-계산기-만들기.md
@@ -27,13 +27,24 @@ def calculator() :
 	operator=raw_input("연산자를 입력하세요. : ")
 #연산자 확인을 위한 조건문 if~elif의 사용
 	if operator=="+" :
-		print("num1+num2={}".format(num1+num2));
+		print("result : {}".format(num1+num2));
 	elif operator=="-" :
-		print("num1-num2={}".format(num1-num2));
+		print("result : {}".format(num1-num2));
 	elif operator=="*" :
-		print("num1*num2={}".format(num1*num2));
+		print("result : {}".format(num1*num2));
 	elif operator=="/" :
-		print("num1/num2={}".format(num1/num2));
+		print("result : {}".format(num1/num2));
+#%d를 사용한 방법
+#	if operator=="+" :
+#		print("result : %d"%(num1+num2));
+#	elif operator=="-" :
+#		print("result : %d"%(num1-num2));
+#	elif operator=="*" :
+#		print("result : %d"%(num1*num2));
+#	elif operator=="/" :
+#		print("result : %d"%(num1/num2));
+
+
 #잘못된 연산자가 입력되었을 경우
 	else :
 		print("올바른 연산자를 입력해주세요.");
