--- a/_posts/2018-10-19-빅데이터의-정의(3V).md
+++ b/_posts/2018-10-19-빅데이터의-정의(3V).md
@@ -10,8 +10,9 @@ permalink: /archivers/python_lecture_04
 
 ## 1. 빅데이터의 정의
 
-	- 활용적 측면 : 기존의 data analytics를 실시간ㆍ결과도출ㆍ구체적 운영 제안의 범위로까지 확장시킨 것.
-	- 분석적 측면 : 기존의 방식으로 저장ㆍ관리ㆍ분석하기 어려울 정도로 큰 규모의 자료를 의미.
+	1) 활용적 측면 : 기존의 data analytics를 실시간ㆍ결과도출ㆍ구체적 운영 제안의 범위로까지 확장시킨 것.
+	
+	2) 분석적 측면 : 기존의 방식으로 저장ㆍ관리ㆍ분석하기 어려울 정도로 큰 규모의 자료를 의미.
 
 	==> 빅데이터는 Volume, Variety, Velocity(3V)의 측면에서 기존의 '정보의 홍수' 개념과 다른 특성을 가진다.
 
