--- a/_posts/2018-11-09-자료구조.md
+++ b/_posts/2018-11-09-자료구조.md
@@ -19,7 +19,7 @@ permalink: /archivers/python_lecture_08
 fruitbox = ["apple", "mango", "carrot", "banana"]
 #리스트에 추가
 fruitbox.append("melon")
-print 'fruitbox'
+print(fruitbox)
 #리스트에서 삭제
 fruitbox.pop("carrot")
 print(fruitbox)
